# aws-cudos-framework-deployment

./: .bandit  .flake8  .gitignore  .pylintrc  ATHENA_MANAGED_QUERY_RESULTS_IMPLEMENTATION.md  CID-CMD.md  COMPREHENSIVE_ATHENA_MANAGED_QUERY_RESULTS_ANALYSIS.md  GITHUB_ISSUE_TEMPLATE.md  GITHUB_PR_TEMPLATE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  MANIFEST.in  Organization_accounts_information.sql  README.md  bump-release.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: codeguru-reviewer.yml  codeql-analysis.yml  publish-rss.yml  python-publish.yml  security-scan.yml  tests.yml  tf-test-deployment.yml
assets/: build_lambda_layer.sh  lint.sh  minimal_permissions.json  placeholder.parquet  publish_lambda_layer.sh  recommended_permissions.json
cfn-templates/: cid-admin-policies.yaml  cid-cfn.tests.bats  cid-cfn.yml  cid-lakeformation-prerequisite.yaml  cid-plugin.yml  cost-forecast-collection.yaml  cost-forecast-dashboard.yaml  cost-forecast-integration.yml  cudos-cfn.yml  cur-aggregation-bucket-write-protection.yaml  cur-aggregation.yaml  data-exports-aggregation.yaml  kpi.cfn.yml  spice-refresh-cfn.yml  tao.cfn.yml  views_cid.json  views_kpi.json
cfn-templates/tests/: test_deploy_with_permissions.py
changes/: CHAMGELOG-sustainability-proxy-metrics.md  CHANGELOG-amazon-connect.md  CHANGELOG-aws-cost-anomalies.md  CHANGELOG-aws-marketplace-spg.md  CHANGELOG-cid.md  CHANGELOG-co.md  CHANGELOG-cod.md  CHANGELOG-cora.md  CHANGELOG-cudos.md  CHANGELOG-euc-dashboard.md  CHANGELOG-euc.md  CHANGELOG-extended-support-cost-projection.md  CHANGELOG-focus.md  CHANGELOG-graviton-opportunities.md  CHANGELOG-graviton-savings.md  CHANGELOG-hed.md  CHANGELOG-kpi.md  CHANGELOG-resiliencehub.md  CHANGELOG-resiliencevue.md  CHANGELOG-scad-cca.md  CHANGELOG-support-cases-radar.md  CHANGELOG-tao.md  CHANGELOG-trends.md  cloud-intelligence-dashboards.rss
cid/: __init__.py  _version.py  base.py  cli.py  common.py  exceptions.py  export.py  logger.py  plugin.py  render_template.py  sql_tools.py  tracker.py  utils.py
cid-govcloud/docs/: setup-auth.md  (+4 more)
cudos/: CHANGELOG.md  README.md  minimal_permissions.json  whats_new.md
dashboards/: catalog.yaml  cost-anomalies.yaml
deployment/: cid-deployment.yaml
docs/: cid-cmd.md  contributing_pr_guide.md  cost-forecast.md  cost_forecast.md  cost_forecast_automation.md  cost_forecast_testing.md
forecast/: README.md
legacy-terraform/: README.md
scripts/: cost_forecast.sh
tao/: CHANGELOG.md  Readme.md  minimal_permissions.json  whats_new.md
terraform/: README.md
terraform-modules/: README.md  terraform-test.bats
trends/: README.md
(+414 files in other folders)
