[wheel]
universal = 1

[metadata]
name = cid-cmd
version = attr: cid._version.__version__
keywords = aws, cmd, cli, cost intelligence dashboards
description = Cloud Intelligence Dashboards deployment helper tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aws-samples/aws-cudos-framework-deployment
author = AWS CUDOS Team
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find_namespace:
install_requires =
    setuptools
    boto3>=1.19
    Click>=8.0
    yaspin==0.14.1
    deepmerge
    PyYAML
    requests
    six>=1.15
    questionary>=1.10

[options.entry_points]
console_scripts =
    cid-cmd=cid.cli:main

cid.plugins =
    Core = cid.builtin.core

[options.package_data]
cid = *.json, *.sql, *.yaml, *.yml
