[wheel]
universal = 1

[metadata]
name = cid-cmd
version = attr: cid._version.__version__
keywords = aws, cmd, cli, cost intelligence dashboards
description = Cloud Intelligence Dashboards deployment helper tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aws-samples/aws-cudos-framework-deployment
author = AWS CUDOS Team
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
include_package_data = True
packages = find_namespace:
install_requires =
    setuptools
    boto3>=1.34.90
    Click>=8.0
    PyYAML
    requests
    tzlocal>=4.0
    six>=1.15
    questionary>=1.10
    tqdm

[options.entry_points]
console_scripts =
    cid-cmd=cid.cli:main

cid.plugins =
    Core = cid.builtin.core

[options.package_data]
cid = *.json, *.sql, *.yaml, *.yml
